# SpeakPlain

./: .gitignore  Cargo.toml  LICENSE  README.md  system_instructions.txt
.cargo/: config.toml
scripts/: convert_to_onnx.py  download_hf.py  download_model.py  download_model_simple.bat  download_qwen3_asr.bat  download_qwen3_asr.py  download_qwen3_full.bat  download_qwen3_full.py  download_sherpa_onnx.py  export_onnx.py  export_sensevoice.py  fix_rainbow_bg.py  make_tokens.py  setup_model.py  test_qwen3_onnx.py  verify_onnx.py
speakplain/: index.html  package-lock.json  package.json
speakplain/skins/: 皮肤开发规范.md  示例皮肤-珊瑚粉.json  示例皮肤-薄荷绿.json
speakplain/skins/classic/: skin.json  styles.css
speakplain/skins/desert/: skin.json  styles.css
speakplain/src/: App.tsx  main.tsx  styles.css
speakplain/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
speakplain/src-tauri/.cargo/: config.toml
speakplain/src-tauri/capabilities/: default.json
speakplain/src-tauri/icons/: icon.icns
speakplain/src-tauri/src/: app_setup.rs  app_state.rs  asr.rs  asr_qwen3asr.rs  asr_sensevoice.rs  audio.rs  command.rs  config.rs  hotkey.rs  indicator.rs  input.rs  llm.rs  main.rs  sdr.rs  storage.rs  tray.rs
speakplain/src-tauri/src/asr_qwen3asr/: decode.rs  encode.rs  mel.rs  mod.rs  model.rs  vad.rs
speakplain/src-tauri/src/asr_sensevoice/: decode.rs  feature.rs  mod.rs  model.rs
speakplain/src-tauri/src/commands/: asr_cmd.rs  config_cmd.rs  history.rs  indicator_cmd.rs  llm_cmd.rs  mod.rs  recording.rs  sdr_cmd.rs
speakplain/src-tauri/src/config/: mod.rs  model.rs  persistence.rs
speakplain/src-tauri/src/llm/: mod.rs  providers.rs  refinement.rs  types.rs
speakplain/src-tauri/src/pipeline/: context.rs  mod.rs  stages.rs
speakplain/src-tauri/src/sdr/: broadcast.rs  ctcss.rs  dsp.rs  hw.rs  mod.rs  types.rs
speakplain/src-tauri/src/sdr/manager/: mod.rs  stream.rs
speakplain/src-tauri/src/sdr_core/: ctcss.rs  device.rs  dsp.rs  mod.rs  stream.rs
(+13 files in other folders)
