[package]
name = "speakplain"
version = "0.3.0"
description = "说人话 - AI语音输入法"
authors = ["SpeakPlain Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.75"

# Windows 子系统设置：windows_subsystem 防止弹出命令行窗口
# 使用 build.rs 动态设置子系统，调试模式显示控制台，发布模式隐藏
[[bin]]
name = "speakplain"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
# tauri-plugin-updater = "2"  # 暫时移除，避免引入 windows 0.61.x 的编译 bug

# Audio
cpal = "0.15"
rubato = "0.14"

# ONNX Runtime - 静态链接，无需外部 onnxruntime.dll
# 启用 DirectML feature 以支持 GPU 加速
ort = { version = "2.0.0-rc.12", features = ["directml"] }
dirs = "5"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Async
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Input Simulation
enigo = "0.2"
arboard = "3.3"
windows = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_Foundation"] }

# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async trait
async-trait = "0.1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Utils
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
once_cell = "1.19"
parking_lot = "0.12"
zip = "2.2"
base64 = "0.22"

# Audio processing
realfft = "3"
mel_filter = "0.1"

# SDR Support - 使用 rust-rtlsdr crate 直接调用 librtlsdr 库
rtlsdr = "0.1"



[package.metadata]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
